yyamamoto+sesetup@salesforce.com/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>宿泊料</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>宿泊料備考</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <defaultValue>false</defaultValue>
        <label>宿泊料（請求フラグ）</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field2z__c</fullName>
        <defaultValue>false</defaultValue>
        <label>キーマン面会2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field3z__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>重要指標情報はXX,XXX,XXXXXとする。</inlineHelpText>
        <label>重要指標情報入手2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field4z__c</fullName>
        <defaultValue>false</defaultValue>
        <label>案件発掘2</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>x01</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>01. すべての行動</label>
    </listViews>
    <listViews>
        <fullName>x02ToDo</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>02. すべての未完了ToDo</label>
    </listViews>
    <listViews>
        <fullName>x03</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>03. すべての行動予定</label>
    </listViews>
    <listViews>
        <fullName>x04</fullName>
        <filterScope>Mine</filterScope>
        <label>04. 私の活動</label>
    </listViews>
    <listViews>
        <fullName>x05</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>05. すべての行動</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>